syntax = "proto3";

message GyroTimestamp {
    double timestamp = 1;
    double xRotationRate = 2;
    double yRotationRate = 3;
    double zRotationRate = 4;

}

message GyroData {
    message MappingPhase {
        repeated GyroTimestamp measurements = 1;
    }
    message LocalizationPhase {
        repeated GyroTimestamp measurements = 1;
    }
    MappingPhase mappingPhase = 1;
    LocalizationPhase localizationPhase = 2;
}

